Auto reconnect and offline buffering tests and functionality